--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,10 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
+include_package_data = True
+
+[options.package_data]
+pydash = *.pyi, py.typed
 
 [options.packages.find]
 where = src
